@@ -6,6 +6,7 @@ Revision history
   - Adjust templates and index template to handle symbolic links. 
   - Add the ability to copy files and directories.
   - Editing now preserves original file line endings.
+  - Add the delete selected items grouped action.
 
 1.0.3 Thu Jun 25 14:07:33 CDT 2009:
   - Changed text field to vLargeTextField class, so it will be big by
